<resources>
    <string name="app_name">ff2110e4c2471593926d06155585386e</string>
    <string name="enter_vehicle_name">Enter Vehicle Name</string>
    <string name="durability_title">Dayanıklılık</string>
    <string name="totally_point_text">Dağıtılacak Puan:</string>
    <string name="totaly_point_number">12</string>
    <string name="devam_et">Devam Et</string>
    <string name="speed">Hız</string>
    <string name="capacity">Kapasite</string>
    <string name="search">Search</string>
    <string name="favorite">Favoriler</string>
</resources>