<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.myd.ff2110e4c2471593926d06155585386e.ui.vehicle.VehicleBuilderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomePageFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/totallyPointText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/totally_point_text"
            android:textSize="28sp"
            app:layout_constraintEnd_toStartOf="@+id/totallyPointNumber"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/totallyPointNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="48dp"
            tools:text="@string/totaly_point_number"
            android:text="@{viewModel.pointObservable}"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/totallyPointText" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/vehicleNameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="32dp"
            android:hint="@string/enter_vehicle_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/totallyPointText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/durabilityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/durability_title"
            app:layout_constraintLeft_toLeftOf="@id/vehicleNameInput"
            app:layout_constraintTop_toBottomOf="@id/vehicleNameInput" />

        <SeekBar
            android:id="@+id/durabilityBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:max="13"
            app:layout_constraintLeft_toLeftOf="@id/vehicleNameInput"
            app:layout_constraintRight_toRightOf="@id/vehicleNameInput"
            app:layout_constraintTop_toBottomOf="@id/durabilityTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/speedBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/speed"
            app:layout_constraintLeft_toLeftOf="@id/vehicleNameInput"
            app:layout_constraintTop_toBottomOf="@id/durabilityBar" />

        <SeekBar
            android:id="@+id/speedBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:max="13"
            app:layout_constraintLeft_toLeftOf="@id/vehicleNameInput"
            app:layout_constraintRight_toRightOf="@id/vehicleNameInput"
            app:layout_constraintTop_toBottomOf="@id/speedBarTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/capacityBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/capacity"
            app:layout_constraintLeft_toLeftOf="@id/vehicleNameInput"
            app:layout_constraintTop_toBottomOf="@id/speedBar" />

        <SeekBar
            android:id="@+id/capacityBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:max="13"
            app:layout_constraintLeft_toLeftOf="@id/vehicleNameInput"
            app:layout_constraintRight_toRightOf="@id/vehicleNameInput"
            app:layout_constraintTop_toBottomOf="@id/capacityBarTitle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnContinue"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white"
            android:text="@string/devam_et"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/capacityBar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>